--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "watch": "rollup -c --bundleConfigAsCjs --watch"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
     "pusher": "^5.1.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-typescript": "^11.1.0",
     "pusher-js": "^8.0.2",
-    "rollup": "^3.20.2"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "@types/sqlite3": "^3.1.8",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
+    "rollup": "^3.20.2",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-scss": "^3.0.0",
     "sass": "^1.61.0"
